kubernetes/apps/gateway-system/gateways/internal/internal-gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: internal-tls-gateway
  namespace: gateway-system
  annotations:
    external-dns.alpha.kubernetes.io/hostname: internal-gateway.altena.io
spec:
  gatewayClassName: cilium
  # https://github.com/cilium/cilium/issues/21926
  # https://github.com/cilium/cilium/pull/33042
  # addresses:
  #   - type: IPAddress
  #     value: 192.168.178.95
  infrastructure:
    annotations:
      io.cilium/lb-ipam-ips: 192.168.2.131
  listeners:
    - protocol: HTTPS
      port: 80
      name: http-gateway
      hostname: "*.altena.io"
      allowedRoutes:
        namespaces:
          from: All
    - protocol: HTTPS
      name: https-gateway
      port: 443
      hostname: "*.altena.io"
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: wildcard-altena-io-tls
      allowedRoutes:
        namespaces:
          from: All
